fix back to top scroll; fix section spacing

--- a/src/partials/_global.scss
+++ b/src/partials/_global.scss
@@ -83,16 +83,17 @@ footer {
 
 .scrollTop {
   position: fixed;
-  right: 100px;
-  bottom: 20px;
+  right: 45px;
+  bottom: 50px;
   align-items: center;
   height: 20px;
   justify-content: center;
   z-index: 1000;
   cursor: pointer;
-  animation: fadeIn 0.3s;
+  animation: fadeIn 1.5s;
   transition: opacity 0.4s;
   opacity: 0.5;
+  width: 3em;
 }
 
 .scrollTop:hover {
